profilelist1exp/unpackaged/objects/OEM_Change_Control__c.object
<CustomObject>
    <description>Created for CR12016 OEM Change Control that has relationship to OEM Requirements</description>
    <fields>
        <fullName>Change_details__c</fullName>
        <description>Created for CR12016 OEM Change Control that has relationship to OEM Requirements</description>
        <label>Change details</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created for CR12016 OEM Change Control that has relationship to OEM Requirements</description>
        <label>Customer approver</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>OEM Change Control</relationshipLabel>
        <relationshipName>OEM_Change_Control</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>Created for CR12016 OEM Change Control that has relationship to OEM Requirements</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OEM_Requirement__c</fullName>
        <description>Created for CR12016 OEM Change Control that has relationship to OEM Requirements</description>
        <label>OEM Requirement</label>
        <referenceTo>OEM_Requirement__c</referenceTo>
        <relationshipLabel>OEM Change Control</relationshipLabel>
        <relationshipName>OEM_Change_Control</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Revision__c</fullName>
        <description>Created for CR12016 OEM Change Control that has relationship to OEM Requirements</description>
        <label>Revision</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_Impact__c</fullName>
        <description>Created for CR12016 OEM Change Control that has relationship to OEM Requirements</description>
        <label>Schedule Impact</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>OEM Change Control</label>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OEM Change Control</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>